--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,7 +2,16 @@
   "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "json", "html"],
   "prettier.printWidth": 160,
   "tsserver.npm": "/usr/bin/npm",
-  "eslint.filetypes": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "eslint.autoFixOnSave": false,
-  "diagnostic.checkCurrentLine": true
+  "diagnostic.checkCurrentLine": true,
+  "eslint.enable": true,
+  "eslint.nodePath": "/usr/local/lib/node_modules/",
+  "eslint.filetypes": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
+  "eslint.options": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
+  "tsserver.reportStyleChecksAsWarnings": false
 }
