changes some setup on tree plugin vim, onestasus, tmux color, and readme.md

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,5 +13,6 @@
       "node": true
     }
   },
-  "tsserver.reportStyleChecksAsWarnings": false
+  "tsserver.reportStyleChecksAsWarnings": true,
+  "pairs.enableCharacters": ["(", "[", "{", "<"]
 }
