cleaning some init.vim

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,12 +1,19 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "json", "html"],
-  "prettier.printWidth": 160,
+  "coc.preferences.formatOnSaveFiletypes": ["css", "html"],
+  "prettier.printWidth": 80,
+  "prettier.arrowParens": "always",
   "tsserver.npm": "/usr/bin/npm",
   "eslint.autoFixOnSave": false,
   "diagnostic.checkCurrentLine": true,
-  "eslint.enable": true,
+  "eslint.enable": false,
   "eslint.nodePath": "/usr/local/lib/node_modules/",
-  "eslint.filetypes": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
+  "npm.binPath": "~/.nvm/versions/node/v12.18.2/bin/npm",
+  "eslint.filetypes": [
+    "javascript",
+    "typescript",
+    "typescriptreact",
+    "javascriptreact"
+  ],
   "eslint.options": {
     "env": {
       "browser": true,
@@ -14,5 +21,6 @@
     }
   },
   "tsserver.reportStyleChecksAsWarnings": true,
-  "pairs.enableCharacters": ["(", "[", "{", "<"]
+  "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'"],
+  "diagnostic.warningSign": ">>"
 }
