--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour247 
 set -g status-left '#H/#S'
-# set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right '#[fg=colour234,bg=default,bold]  #[fg=#fcfcfc,bg=colour234,bold] ~#{pane_current_path} '
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+# set -g status-right '#[fg=colour234,bg=default,bold]  #[fg=#fcfcfc,bg=colour234,bold] ~#{pane_current_path} '
 set -g status-justify 'centre'
 set -g status-right-length 50
 set -g status-left-length 20
