refactoring the init.vim to be more tidy and simpler

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -22,5 +22,6 @@
   },
   "tsserver.reportStyleChecksAsWarnings": true,
   "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'"],
-  "diagnostic.warningSign": ">>"
+  "diagnostic.warningSign": ">>",
+  "javascript.suggestionActions.enabled": false
 }
