a better gitignore which will exclute ftplugin folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # Ignore all files
 /*
-.config/nvim/.netrwhist
 
 # Unignore nvim folder
 !/.config/
 /.config/**/
 !.config/nvim/
+!.config/nvim/*
+/.config/nvim/colors/
+/.config/nvim/.netrwhist
+!.config/nvim/after/*
+!.config/nvim/after/ftplugin/
 
 !/boilerplates/
 
