--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,44 +1,44 @@
-# ----- " KEL ADD THEY SAID " -----
+# ----- TMUX BEHAVIOUR ------
+set -g history-limit 10000
+set-option -g history-limit 10000
+set -g mouse on
 
-# set the new pane to path from previous pane
+# ----- ALLOW COLOR FOR TMUX -----
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -sg escape-time 0
+
+
+# ----- SET NEW WINDOW TO PATH FROM PREVIOUS WINDOW -----
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# allow mouse to select panes
+
+# ----- BIND FOR MOVING-WINDOW | if use <prefix-j> it will bind + key at the same time -----
+bind-key j swap-window -t -1\; select-window -t -1
+bind-key k swap-window -t +1\; select-window -t +1
+
+
+# ----- ALLOW MOUSE TO SELECT PANES -----
 # set-option -g mouse select-pane on
 
-# allow yank into system clipboard
-#bind C-y run "tmux save-buffer - | xclip -i"
+
+# ----- ALLOW YANK INTO SYSTEM CLIPBOARD -----
+# bind C-y run "tmux save-buffer - | xclip -i"
 bind C-y run-shell -b "tmux show-buffer | xclip -selection clipboard -i"
-# move x clipboard into tmux paste buffer
+# MOVE X CLIPBOARD INTO TMUX PASTE BUFFER
 bind C-p run-shell -b "xclip -o -selection clipboard | tmux load-buffer - ; tmux paste-buffer"
 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -sg escape-time 0
 
-# ----- " Tmux history " ------
-set -g history-limit 1000
-set-option -g history-limit 3000
-# set -g mouse on
-
-# ----- " Followin ghotz " ----
-set -g status-position bottom
+# ----- THE BAR BELOW CONFIGURATION ----
 set -g status-bg colour234
 set -g status-fg colour247 
-set -g status-left '#H/#S'
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-# set -g status-right '#[fg=colour234,bg=default,bold]  #[fg=#fcfcfc,bg=colour234,bold] ~#{pane_current_path} '
 set -g status-justify 'centre'
-set -g status-right-length 50
+set -g status-left '#H/#S'
 set -g status-left-length 20
+set -g status-position bottom
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
 setw -g mode-keys vi
-
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
-
-set-option -g history-limit 5000
-
-# ------ " END OF KEL " ------
-
-# color the current focus window
