tmux copy to win clipboard support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,15 +19,14 @@ bind-key j swap-window -t -1\; select-window -t -1
 bind-key k swap-window -t +1\; select-window -t +1
 
 
-# ----- ALLOW MOUSE TO SELECT PANES -----
-# set-option -g mouse select-pane on
-
-
-# ----- ALLOW YANK INTO SYSTEM CLIPBOARD -----
-# bind C-y run "tmux save-buffer - | xclip -i"
-bind C-y run-shell -b "tmux show-buffer | xclip -selection clipboard -i"
-# MOVE X CLIPBOARD INTO TMUX PASTE BUFFER
-bind C-p run-shell -b "xclip -o -selection clipboard | tmux load-buffer - ; tmux paste-buffer"
+# ----- MOUSE CONFIGURATION -----
+setw -g mode-keys vi
+# ----- SYSTEM CLIPBOARD COPY -----
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
@@ -39,6 +38,5 @@ set -g status-left-length 20
 set -g status-position bottom
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
-setw -g mode-keys vi
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
