--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # ----- TMUX BEHAVIOUR ------
 set -g history-limit 10000
 set-option -g history-limit 10000
-set -g mouse on
+
 
 # ----- ALLOW COLOR FOR TMUX -----
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -15,11 +15,12 @@ bind c new-window -c "#{pane_current_path}"
 
 
 # ----- BIND FOR MOVING-WINDOW | if use <prefix-j> it will bind + key at the same time -----
-bind-key j swap-window -t -1\; select-window -t -1
-bind-key k swap-window -t +1\; select-window -t +1
+bind-key k swap-window -t -1\; select-window -t -1
+bind-key j swap-window -t +1\; select-window -t +1
 
 
 # ----- MOUSE CONFIGURATION -----
+set -g mouse on
 setw -g mode-keys vi
 # ----- SYSTEM CLIPBOARD COPY -----
 bind-key -T copy-mode-vi v send-keys -X begin-selection
