add tmux plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/m
 
 # ----- THE BAR BELOW CONFIGURATION ----
 set -g status-bg colour234
-set -g status-fg colour247 
+set -g status-fg colour247
 set -g status-justify 'centre'
 set -g status-left '#H/#S'
 set -g status-left-length 20
@@ -41,3 +41,11 @@ set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=c
 set -g status-right-length 50
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
+
+
+# ----- LIST OF PLUGINS -----
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
