--- a/.config/i3/config
+++ b/.config/i3/config
@@ -68,7 +68,7 @@ bindsym $mod+p exec arandr
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec rofi -show drun
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec rofi -modi drun,run -show drun
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -254,4 +254,4 @@ for_window [class="Nitrogen"] floating enable
 #         status_command i3status
 # }
 # ----- POLYBAR -----
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
