--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -78,6 +78,7 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
+reverse-scroll = false
 
 ; Only show workspaces on the same output as the bar
 pin-workspaces = true
