--- a/.config/i3/config
+++ b/.config/i3/config
@@ -59,6 +59,10 @@ bindsym $mod+e exec --no-startup-id nautilus
 bindsym $mod+o exec --no-startup-id $term -e nvim ~/.config/i3/config
 
 
+# ----- KEL CALENDAR -----
+for_window [class="Yad" title="yad-calendar"] floating enable
+
+
 # ----- KEL MONITOR -----
 for_window [class="Arandr"] floating enable
 bindsym $mod+p exec arandr
@@ -67,16 +71,12 @@ bindsym $mod+p exec arandr
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu (a program launcher)
+# ----- KEL DMENU -----
 bindsym $mod+d exec rofi -show drun
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec rofi -modi drun,run -show drun
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-
-
-# ----- KEL WALLPAPER -----
-exec --no-startup-id nitrogen --set-auto ~/Downloads/Wallpaper/archwalp.png --head=0 && nitrogen --set-auto ~/Downloads/Wallpaper/archwalp.png --head=1
 
 
 # ----- KEL COMMENT BELOW -----
@@ -243,10 +243,6 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
-
-# ----- KEL SPECIFY DEFAULT FLOATING APP -----
-for_window [class="Nitrogen"] floating enable
 
 
 # ----- KEL STATUS BAR -----
