--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -41,7 +41,7 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = filesystem cpu memory xkeyboard wifi
-modules-right = my-text-label pulseaudio date power
+modules-right = my-text-label pulseaudio calendar power
 modules-center = i3
 
 [module/xwindow]
@@ -160,12 +160,11 @@ label-connected = %local_ip%
 
 format-disconnected = no-connection(eth)
 
-[module/date]
+[module/calendar]
 type = custom/script
-exec = ~/utils/calendar.sh
+exec = ~/utils/calendar-popup.sh
 interval = 5
-click-left = exec notify-send -i ~/path/to/calendar_icon.png "$(cal)"
-label = %output:25%
+click-left = ~/utils/calendar-popup.sh --popup &
 
 [module/pulseaudio]
 type = internal/pulseaudio
