--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,8 @@
 set $mod Mod4
 set $alt Mod1
 
-# ----- KEL TERMINAL -----
+
+# ----- i3 FONT -----
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Consolas NF 11
@@ -52,6 +53,7 @@ bindsym $mod+o exec --no-startup-id $term -e nvim ~/.config/i3/config
 # ----- KEL FLOATING ENABLE -----
 for_window [class="Yad" title="yad-calendar"] floating enable
 for_window [class="gnome-system-monitor"] floating enable
+for_window [class="vokoscreenNG"] floating enable
 
 
 # ----- KEL MONITOR -----
@@ -71,6 +73,7 @@ exec --no-startup-id gnome-flashback
 # kill focused window
 bindsym $mod+q kill
 
+
 # ----- KEL DMENU -----
 bindsym $mod+d exec rofi -show drun
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -78,6 +81,15 @@ bindsym $mod+d exec rofi -show drun
 
 # ----- KEL AUTO TILING -----
 exec_always --no-startup-id autotiling
+
+
+# ----- KEL WINDOW BORDER COLOR -----
+client.focused          #abb2bf #abb2bf #0c0c0c #F87060   #abb2bf
+client.focused_inactive #333333 #222222 #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+client.background       #ffffff
 
 
 # ----- KEL GAPS -----
@@ -95,7 +107,7 @@ gaps outer $outer_gaps
 
 # ----- KEL SCREEN SHOT -----
 # bindsym $mod+y			            exec --no-startup-id flameshot gui -p ~/Pics/screenshots
-# bindsym $mod+Shift+y		        exec --no-startup-id flameshot full -p ~/Pics/screenshots
+# bindsym $mod+Shift+y		            exec --no-startup-id flameshot full -p ~/Pics/screenshots
 bindsym Print exec flameshot gui
 
 
@@ -188,16 +200,6 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-
-
-# ----- KEL WINDOW BORDER -----
-# Window borders
-client.focused          #4c7899 #285577 #ffffff #F87060   #abb2bf
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-client.background       #ffffff
 
 
 # ----- KEL SESSION MANAGEMENT - LOGOUT | SHUTDOWN -----
