fix shutdown error and vim indent error

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -208,7 +208,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 mode "exit: [l]ogout  | [r]eboot  | [s]hutdown " {
   bindsym l exec i3-msg exit
   bindsym r exec systemctl reboot
-  bindsym s exec systemctl shutdown
+  bindsym s exec systemctl poweroff
   bindsym Escape mode "default"
   bindsym Return mode "default"
 }
