--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -40,7 +40,7 @@ font-0 = Hack Nerd Font : size=10.5;2
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = filesystem cpu memory xkeyboard wifi
+modules-left = filesystem cpu memory wifi xkeyboard
 modules-right = arch pulseaudio calendar power
 modules-center = i3
 
