change theme to one dark, testing tho

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -70,7 +70,7 @@ label-unmounted = %mountpoint% not mounted
 
 [module/arch]
 type = custom/text
-content = Arch Linux
+content =  Arch Linux
 ; 
 
 
