--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -192,90 +192,90 @@ draw_bold_text_with_bright_colors: true
 
 # ----- GRUVBOX THEME -----
 # Base16 Gruvbox dark, hard 256
-#colors:
-#  # Default colors
-#  primary:
-#    background: '0x1d2021'
-#    foreground: '0xd5c4a1'
-#
-#  # Colors the cursor will use if `custom_cursor_colors` is true
-#  cursor:
-#    text: '0x1d2021'
-#    cursor: '0xd5c4a1'
-#
-#  # Normal colors
-#  normal:
-#    black:   '0x1d2021'
-#    red:     '0xfb4934'
-#    green:   '0xb8bb26'
-#    yellow:  '0xfabd2f'
-#    blue:    '0x83a598'
-#    magenta: '0xd3869b'
-#    cyan:    '0x8ec07c'
-#    white:   '0xd5c4a1'
-#
-#  # Bright colors
-#  bright:
-#    black:   '0x665c54'
-#    red:     '0xfb4934'
-#    green:   '0xb8bb26'
-#    yellow:  '0xfabd2f'
-#    blue:    '0x83a598'
-#    magenta: '0xd3869b'
-#    cyan:    '0x8ec07c'
-#    white:   '0xfbf1c7'
-#
-#  indexed_colors:
-#    - { index: 16, color: '0xfe8019' }
-#    - { index: 17, color: '0xd65d0e' }
-#    - { index: 18, color: '0x3c3836' }
-#    - { index: 19, color: '0x504945' }
-#    - { index: 20, color: '0xbdae93' }
-#    - { index: 21, color: '0xebdbb2' }
-# ----- GRUVBOX THEME END -----
-
-# ----- ONE DARK THEME -----
 colors:
   # Default colors
   primary:
-    background: '0x1e222a'
-    foreground: '0xabb2bf'
+    background: '0x1d2021'
+    foreground: '0xd5c4a1'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x282c34'
-    cursor: '0xabb2bf'
+    text: '0x1d2021'
+    cursor: '0xd5c4a1'
 
   # Normal colors
   normal:
-    black:   '0x282c34'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xe5c07b'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0xabb2bf'
+    black:   '0x1d2021'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xd5c4a1'
 
   # Bright colors
   bright:
-    black:   '0x545862'
-    red:     '0xe06c75'
-    green:   '0x98c379'
-    yellow:  '0xe5c07b'
-    blue:    '0x61afef'
-    magenta: '0xc678dd'
-    cyan:    '0x56b6c2'
-    white:   '0xc8ccd4'
+    black:   '0x665c54'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xfbf1c7'
 
   indexed_colors:
-    - { index: 16, color: '0xd19a66' }
-    - { index: 17, color: '0xbe5046' }
-    - { index: 18, color: '0x353b45' }
-    - { index: 19, color: '0x3e4451' }
-    - { index: 20, color: '0x565c64' }
-    - { index: 21, color: '0xb6bdca' }
+    - { index: 16, color: '0xfe8019' }
+    - { index: 17, color: '0xd65d0e' }
+    - { index: 18, color: '0x3c3836' }
+    - { index: 19, color: '0x504945' }
+    - { index: 20, color: '0xbdae93' }
+    - { index: 21, color: '0xebdbb2' }
+# ----- GRUVBOX THEME END -----
 
+# ----- ONE DARK THEME -----
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x1e222a'
+#     foreground: '0xabb2bf'
+#
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0x282c34'
+#     cursor: '0xabb2bf'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x282c34'
+#     red:     '0xe06c75'
+#     green:   '0x98c379'
+#     yellow:  '0xe5c07b'
+#     blue:    '0x61afef'
+#     magenta: '0xc678dd'
+#     cyan:    '0x56b6c2'
+#     white:   '0xabb2bf'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x545862'
+#     red:     '0xe06c75'
+#     green:   '0x98c379'
+#     yellow:  '0xe5c07b'
+#     blue:    '0x61afef'
+#     magenta: '0xc678dd'
+#     cyan:    '0x56b6c2'
+#     white:   '0xc8ccd4'
+#
+#   indexed_colors:
+#     - { index: 16, color: '0xd19a66' }
+#     - { index: 17, color: '0xbe5046' }
+#     - { index: 18, color: '0x353b45' }
+#     - { index: 19, color: '0x3e4451' }
+#     - { index: 20, color: '0x565c64' }
+#     - { index: 21, color: '0xb6bdca' }
+#
 # # ----- ONE DARK THEME END -----
 
 draw_bold_text_with_bright_colors: false
@@ -311,7 +311,7 @@ draw_bold_text_with_bright_colors: false
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
 # background_opacity: 1.0
-background_opacity: 0.9
+background_opacity: 0.8
 
 selection:
   save_to_clipboard: true
