--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -16,209 +16,178 @@
 ;
 ;==========================================================
 
+; =================================================
+; BAR
+; =================================================
+
 [bar/bar]
-width = 100%
-height = 24
-offset-x = 0%
-offset-y = 0%
-radius-top = 12.0
-fixed-center = true
-bottom = true
-
-line-size = 0
-
 border-left-size = 10
 border-right-size = 10
-
-padding-left = 2
-padding-right = 2
-
-module-margin-left = 3
-module-margin-center = 3
-
+bottom = true
+fixed-center = true
 font-0 = Hack Nerd Font : size=10.5;2
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
-
+height = 24
+line-size = 0
+module-margin-center = 3
+module-margin-left = 3
+modules-center = i3
 modules-left = filesystem cpu memory wifi xkeyboard
 modules-right = arch pulseaudio calendar power
-modules-center = i3
+monitor = ${env:MONITOR:}
+offset-x = 0%
+offset-y = 0%
+padding-left = 2
+padding-right = 2
+radius-top = 12.0
+width = 100%
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-
-label-layout = %layout%
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
+; =================================================
+; ARCH TEXT
+; =================================================
 
 [module/arch]
-type = custom/text
-content =  Arch Linux
 ; 
+content =  Arch Linux
+type = custom/text
 
+
+; =================================================
+; i3 THINGS
+; =================================================
 
 [module/i3]
-type = internal/i3
+; Only show workspaces on the same output as the bar
+; focused = Active workspace on focused monitor
+; urgent = Workspace with urgency hint set
+;#F87060
 format = <label-state> <label-mode>
 index-sort = true
-wrapping-scroll = false
-reverse-scroll = true
-
-; Only show workspaces on the same output as the bar
-pin-workspaces = true
-
-label-mode-padding = 5
-
-; focused = Active workspace on focused monitor
 label-focused = %name%
-label-focused-padding = 2
 label-focused-foreground = #0a81f5
-;#F87060
-
-unfocused = Inactive workspace on any monitor
+label-focused-padding = 2
+label-mode-padding = 5
 label-unfocused = %name%
 label-unfocused-padding = 2
-
-visible = Active workspace on unfocused monitor
-label-visible = %index%
-
-; urgent = Workspace with urgency hint set
 label-urgent = %name%
 label-urgent-padding = 2
+label-visible = %index%
+pin-workspaces = true
+reverse-scroll = true
+type = internal/i3
+unfocused = Inactive workspace on any monitor
+visible = Active workspace on unfocused monitor
+wrapping-scroll = false
 
 
-[module/backlight]
-type = custom/script
-interval = 0.2
-exec = ~/utils/backlight.sh
+; =================================================
+; MACHINE COMPONENT
+; =================================================
 
-scroll-up = exec light -A 5
-scroll-down = exec light -U 5
-
-format-prefix = " "
-
-label = %output%
-label-foreground = ${colors.fg}
-format-padding = 1
-
+[module/filesystem]
+interval = 25
+label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-unmounted = %mountpoint% not mounted
+mount-0 = /
+type = internal/fs
 
 [module/cpu]
-type = internal/cpu
-interval = 2
 format-prefix = " "
+interval = 2
 label = %percentage: %%
+type = internal/cpu
 
 [module/memory]
-type = internal/memory
-interval = 2
 format-prefix = "mem: "
+interval = 2
 label = %percentage_used%%
+type = internal/memory
+
+
+; =================================================
+; WIFI
+; =================================================
 
 [module/wifi]
-type = internal/network
+format-connected = <ramp-signal> <label-connected>
 interface = wlp3s0
 interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-
 label-connected = %{A1:gnome-control-center wifi &:}%essid%%{A}
 label-disconnected = %{A1:gnome-control-center wifi &:}no-wifi%{A}
-
 ramp-signal-0 = 睊
 ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
+type = internal/network
+
+
+; =================================================
+; ETHERNET
+; =================================================
 
 [module/eth]
-type = internal/network
+format-connected-prefix = "  "
+format-connected-underline = #55aa55
+format-disconnected = no-connection(eth)
 interface = eno1
 interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = "  "
 label-connected = %local_ip%
+type = internal/network
 
-format-disconnected = no-connection(eth)
+
+; =================================================
+; CALENDAR | DATE
+; =================================================
 
 [module/calendar]
-type = custom/script
+click-left = ~/utils/calendar-popup.sh --popup &
 exec = ~/utils/calendar-popup.sh
 interval = 5
-click-left = ~/utils/calendar-popup.sh --popup &
+type = custom/script
+
+
+; =================================================
+; AUDIO | AUDIO
+; =================================================
 
 [module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume> <bar-volume>
-label-volume =  %percentage%%
-
-label-muted = 🔇 muted
-label-muted-foreground = #666
-
-bar-volume-width = 10
+bar-volume-empty = ─
+bar-volume-empty-font = 2
+bar-volume-fill = ─
+bar-volume-fill-font = 2
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-width = 10
+format-volume = <label-volume> <bar-volume>
+label-muted = 🔇 muted
+label-muted-foreground = #666
+label-volume =  %percentage%%
+type = internal/pulseaudio
 
-; MODULE FOR BATTERY, DEFINE MODULE NAME AND THE BATTERY MODULE CONFIG TO USE
-; format-charging = <animation-charging> <label-charging>
-; format-discharging = <animation-discharging> <label-discharging>
-; format-discharging-underline = ${self.format-charging-underline}
-;
-; format-prefix = "   "
-; format-full-underline = ${self.format-charging-underline}
-;
-; ramp-capacity-0 = 
-; ramp-capacity-1 = 
-; ramp-capacity-2 = 
-;
-; animation-charging-0 = 
-; animation-charging-1 = 
-; animation-charging-2 = 
-; animation-charging-framerate = 750
-;
-; animation-discharging-0 = 
-; animation-discharging-1 = 
-; animation-discharging-2 = 
-; animation-discharging-framerate = 750
 
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
+; =================================================
+; LIGHT | BRIGHTNESS
+; =================================================
 
-format = <ramp> <label>
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+[module/backlight]
+exec = ~/utils/backlight.sh
+format-padding = 1
+format-prefix = " "
+interval = 0.2
+label = %output%
+label-foreground = ${colors.fg}
+scroll-down = exec light -U 5
+scroll-up = exec light -A 5
+type = custom/script
 
-label = %temperature-c%
-label-warn = %temperature-c%
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+; =================================================
+; POWER (REBOOT, RESTART, ETC)
+; =================================================
 
 [module/power]
 type = custom/menu
@@ -250,13 +219,75 @@ menu-3-0-exec = i3-msg exit
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
 
+
+; =================================================
+; KEYBOARD LAYOUT
+; =================================================
+
+[module/xwindow]
+label = %title:0:30:...%
+type = internal/xwindow
+
+[module/xkeyboard]
+blacklist-0 = num lock
+format-prefix = " "
+label-indicator-margin = 1
+label-indicator-padding = 2
+label-layout = %layout%
+type = internal/xkeyboard
+
+
+; =================================================
+; BATTERY | NOT USED
+; =================================================
+; MODULE FOR BATTERY, DEFINE MODULE NAME AND THE BATTERY MODULE CONFIG TO USE
+; animation-charging-0 = 
+; animation-charging-1 = 
+; animation-charging-2 = 
+; animation-charging-framerate = 750
+; animation-discharging-0 = 
+; animation-discharging-1 = 
+; animation-discharging-2 = 
+; animation-discharging-framerate = 750
+; format-charging = <animation-charging> <label-charging>
+; format-discharging = <animation-discharging> <label-discharging>
+; format-discharging-underline = ${self.format-charging-underline}
+; format-full-underline = ${self.format-charging-underline}
+; format-prefix = "   "
+; ramp-capacity-0 = 
+; ramp-capacity-1 = 
+; ramp-capacity-2 = 
+
+
+; =================================================
+; TEMPERATURE | NOT USED
+; =================================================
+
+; [module/temperature]
+; type = internal/temperature
+; format = <ramp> <label>
+; format-warn = <ramp> <label-warn>
+; format-warn-underline = ${self.format-underline}
+; label = %temperature-c%
+; label-warn = %temperature-c%
+; ramp-0 = 
+; ramp-1 = 
+; ramp-2 = 
+; thermal-zone = 0
+; warn-temperature = 60
+
+
+; =================================================
+; CONFIG
+; =================================================
+
 [settings]
-screenchange-reload = true
-compositing-foreground = source
 compositing-border = over
+compositing-foreground = source
 pseudo-transparency = true
+screenchange-reload = true
 
 [global/wm]
-margin-top = 0
-margin-bottom = 0
 enable-ipc = true
+margin-bottom = 0
+margin-top = 0
