--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,16 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "/mnt/c/Windows
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
 
 
+# ----- VIM STATUS TMUX ------
+set -g focus-events on
+set -g status-bg default
+set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
+set -g status-right-length 120
+set -g status-interval 0
+
+
 # ----- THE BAR BELOW CONFIGURATION ----
-set -g status-bg colour234
+set -g status-bg "#171A1A" #colour234
 set -g status-fg colour247
 set -g status-justify 'left'
 set -g status-position bottom
@@ -41,13 +49,6 @@ set -g status-position bottom
 # set -g status-right-length 50
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
-
-# ----- VIM STATUS TMUX ------
-set -g focus-events on
-set -g status-bg default
-set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
-set -g status-right-length 120
-set -g status-interval 0
 
 
 # ----- LIST OF PLUGINS -----
