--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -22,25 +22,25 @@
 
 
 [colors]
-background = #161B1A
-foreground = #ebdbb2
-red = #CC241D
-green = #98971A
-yellow = #D79921
-blue = #458588
-teal = #B16286
-magenta = #689D6A
-gray = #928374
+; background = #161B1A
+; foreground = #ebdbb2
+; red = #CC241D
+; green = #98971A
+; yellow = #D79921
+; blue = #458588
+; teal = #B16286
+; magenta = #689D6A
+; gray = #928374
 
-; background = ${xrdb:color0}
-; foreground = ${xrdb:color15}
-; red = ${xrdb:color1}
-; green = ${xrdb:color2}
-; yellow = ${xrdb:color3}
-; blue = ${xrdb:color4}
-; teal = ${xrdb:color5}
-; magenta = ${xrdb:color6}
-; gray = ${xrdb:color8}
+background = ${xrdb:background}
+foreground = ${xrdb:foreground}
+red = ${xrdb:color1}
+green = ${xrdb:color2}
+yellow = ${xrdb:color3}
+blue = ${xrdb:color4}
+teal = ${xrdb:color5}
+magenta = ${xrdb:color6}
+gray = ${xrdb:color8}
 
 [bar/bar]
 border-left-size = 10
