--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set -g status-interval 0
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
-set -g status-bg "#171A1A" #colour234
+set -g status-bg "#161B1A" #colour234
 set -g status-fg colour247
 set -g status-justify 'left'
 set -g status-position bottom
