cleaning dir after off colorscheme

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -125,7 +125,7 @@ content-foreground = ${colors.red}
 
 [module/filesystem]
 interval = 25
-label-mounted = %{F#458588}%mountpoint%%{F-}%{F#458588}:%{F-} %percentage_used%%
+label-mounted = %{F#FFFFFF}%mountpoint%%{F-}%{F#FFFFFF}:%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-mounted-foreground = ${colors.foreground}
 mount-0 = /
@@ -350,7 +350,3 @@ screenchange-reload = true
 [global/wm]
 enable-ipc = true
 margin-bottom = 0
-margin-top = 0
-
-; support line higlighted on vim
-; vim:set ft=dosini:
